2006-02-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh: Better wrapper compatibility with
	std::vector.

	* flower/include/flower-proto.hh: Remove cheap forward declaration
	attempts.

	* stepmake/aclocal.m4 (STEPMAKE_STL_DATA_METHOD): Bugfix.

2006-02-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/invoking.itely: add warning about command line.

2006-02-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-proto.hh: add Prob, rm Page.

	* flower/include/std-vector.hh (VPOS): use 64 bit-proof version.

	* VERSION: release 2.7.34

	* lily/relocate.cc (framework_relocation): show canary if
	GHOSTSCRIPT_VERSION undefined.

	* GNUmakefile.in: remove $(VERSION) symlink.

	* lily/relocate.cc (setup_paths): add + 

2006-02-13  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: specify sizes for all big HTML pages.

2006-02-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove @FRAMEWORKDIR@

	* lily/system-start-text.cc (get_stencil): new file: separate out
	system-start-delimiter text support.

	* input/**ly: replace \context with \new where appropriate.
	
	* THANKS: add Don.

	* lily/slur-scoring.cc (get_base_attachments): use
	robust_relative_extent. This fixes problems with empty paper-columns. 

2006-02-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): document \new syntax.

	* scm/define-music-properties.scm (all-music-properties):
	create-new property.

	* lily/context-specced-music-iterator.cc (construct_children):
	inspect 'create-new property iso. magical $uniqueContextId context
	id.

	* lily/parser.yy (optional_id): allow \new "Bar" = "foo" too.

	* lily/context-key-manager.cc (Module): new file. Encapsulate
	object key generation.

	* lily/include/context-key-manager.hh (Module): new file.

2006-02-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): center instrument
	names vertically
