@@ -125,10 +125,9 @@ Book::process (Output_def *default_paper,
 		paper_book->add_performance (perf->self_scm ());
 	      else if (Paper_score *pscore = dynamic_cast<Paper_score *> (output))
 		{
-		  SCM systems = pscore->get_paper_systems ();
 		  if (ly_is_module (score->header_))
 		    paper_book->add_score (score->header_);
-		  paper_book->add_score (systems);
+		  paper_book->add_score (pscore->self_scm ());
 		}
 
 	      outputs = scm_cdr (outputs);
